--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ uvicorn[standard]==0.27.0
 motor==3.3.2
 httpx==0.26.0
 PyJWT==2.8.0
-pydantic==2.5.0
+pydantic==2.10.4  ← CHANGE THIS (was 2.5.0)
 python-multipart==0.0.6
